fixed search image alignment

--- a/styles.scss
+++ b/styles.scss
@@ -154,7 +154,7 @@ a:visited {
     background: transparent;
     border: none;
     cursor: pointer;
-    margin-top: -100px;
+    margin-bottom: 6px;
 }
 
 .FAuhyb {
@@ -166,11 +166,7 @@ a:visited {
     display: inline-block;
     fill: currentColor;
     height: 24px;
-    line-height: 24px;
     width: 24px;
-}
-
-.searchalign {
 }
 
 %roundborder {
@@ -194,14 +190,15 @@ a:visited {
     width: 537px;
 }
 
+.length {
+    width: 600px;
+}
+
 .searchicon {
     display: flex;
     align-items: center;
-    padding-right: 13px;
-    margin-top: -5px;
-    margin-left: 0px;
-    padding-top: 5px;
     width: 30px;
+    margin-bottom: 16px;
 }
 
 .iconalignment {
@@ -231,6 +228,7 @@ a:visited {
 
 %searchinput {
     background-color: transparent;
+    border: none;
     color: rgba(0,0,0,.87);
     word-wrap: break-word;
     outline: none;
@@ -240,18 +238,20 @@ a:visited {
     font-size: 16px;
     line-height: 34px;
     height: 43px !important;
-    margin-top: -28px;
-    margin-left: 30px;
 }
 
 .searchin {
     @extend %searchinput;
     width: 500px;
+    margin-top: -28px;
+    margin-left: 30px;
 }
 
 .imagein {
     @extend %searchinput;
-    width: 400px;
+    width: 448px;
+    margin-top: -4px;
+    margin-left: -4px;
 }
 
 div {
